core: update gitignore to include libs' *.o files

--- a/core/.gitignore
+++ b/core/.gitignore
@@ -2,6 +2,8 @@
 objs
 config.h
 
+libs/zlib-1.2.3/*.o
+libs/libpng-1.2.8/*.o
 libs/libpng-1.2.8/Makefile
 libs/zlib-1.2.3/Makefile
 libs/zlib-1.2.3/zconf.h
