core: Fix installation patchs for /lib and /sbin stuff.
Files that should be installed in /lib or /sbin were installed
into /usr/lib and /usr/sbin because of a recent Makefile change.

--- a/core/Makefile
+++ b/core/Makefile
@@ -26,8 +26,8 @@ FT2SRC  ?= libs/freetype-2.1.9
 LIB		?= lib
 
 prefix     ?= /usr
-sbindir    = ${prefix}/sbin
-libdir     = ${prefix}/${LIB}
+sbindir    = /sbin
+libdir     = /${LIB}
 usrbindir  = ${prefix}/bin
 mandir 	   = ${prefix}/share/man
 incdir     = ${prefix}/include
