core: add misc/blittest and misc/avg.sh

--- a/core/misc/Makefile
+++ b/core/misc/Makefile
@@ -1,7 +1,7 @@
 LDLIBS = -lsplashrender
 CFLAGS = -g
 
-all: splashtest benchmark
+all: splashtest benchmark blittest
 
 clean:
 	rm -rf splashtest benchmark
